feat: 增加评论和收藏功能，修复收藏夹删除视频
新增功能:
- VideoDetailActivity 增加发送评论功能
- VideoDetailActivity 增加收藏/取消收藏视频功能
- CommentFragment 增加刷新评论方法

Bug 修复:
- 修复播放器上报历史记录失败的问题
- 修复收藏夹删除视频失败的问题
- 更新 FavoriteApi 中的接口

性能优化:
- 播放器硬解重试机制优化